--- a/netkliks-app/src/app/components/header/header.css
+++ b/netkliks-app/src/app/components/header/header.css
@@ -9,13 +9,17 @@
   align-items: center;
 }
 
+.header-logo {
+  text-decoration: none;
+}
+
 .header-logo h1 {
   margin: 0;
   font-family: Inter, sans-serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 29px;
-
+  color: rgba(0, 0, 0, 1);
 }
 
 .header-logo p {
@@ -24,6 +28,7 @@
   font-size: 12px;
   font-weight: 300;
   line-height: 15px;
+  color: rgba(0, 0, 0, 1);
 }
 
 .header-controls a {
