--- a/netkliks-app/src/app/components/card/card.css
+++ b/netkliks-app/src/app/components/card/card.css
@@ -1,5 +1,9 @@
-.content-cards__item {
+:host {
   width: calc((100% - 60px) / 3);
+}
+
+.content-cards__item {
+  width: 100%;
   text-decoration: none;
 }
 
@@ -58,13 +62,13 @@
 }
 
 @media (max-width: 991px) {
-  .content-cards__item {
-    width: calc((100% - 30px) / 2);
+  :host {
+    width: calc((100% - 60px) / 2);
   }
 }
 
 @media (max-width: 480px) {
-  .content-cards__item {
+  :host {
     width: 100%;
     min-width: 100%;
   }
