--- a/netkliks-app/src/app/components/search/search.html
+++ b/netkliks-app/src/app/components/search/search.html
@@ -1,8 +1,15 @@
 <section class="search">
   <div class="container">
     <div class="search-box">
-      <input id="search-input" type="text" placeholder="Что хотите посмотреть?">
-      <button id="search-button">
+      <input 
+      [value] = "searchString"
+        id="search-input" 
+        type="text" 
+        placeholder="Что хотите посмотреть?"
+        (input)="updateValue($event)"
+      >
+
+      <button id="search-button" (click)="updateSearch($event)">
         <img src="img/search.svg" alt="search">
         <span>Найти</span>
       </button>
